syntax="proto3";

package Greet;
option go_package="./Greet/GreetPb";

message Greeting {
  string firstName = 1;
  string lastName = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService{
  // Unary Api
  rpc Greet(GreetRequest) returns (GreetResponse) {};
}

